Ads Sample works with VPN

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="backBtn">back</string>
     <string name="author">Sergey Strchan</string>
     <string name="github">github.com/VoidMiner</string>
+    <string name="superHerRes">SuperHeroes</string>
+    <string name="aBout">About</string>
 </resources>
